# prompt-matrix-runner

./: README.md  pyproject.toml
examples/: matrix.json
src/prompt_matrix_runner/: __init__.py  __main__.py  cli.py  core.py
tests/: test_prompt_matrix_runner.py
